summative.moria.Moria.scala.error
Erreur de compilation :
Moria:4: error: ';' expected but ')' found.
if (estSurBiscuit){porteBiscuit();gauche();gauche());while (!estSurBiscuit()){avance()};recule();poseBiscuit()}
                                                   ^