summative.moria.Moria.scala.code
while (getCouleurSol()!=Color.green)
while (!estSurBiscuit() && !estFaceMur())
	{droite();droite();avance()}
if (estSurBiscuit){porteBiscuit();gauche();gauche());while (!estSurBiscuit()){avance()};recule();poseBiscuit()}
if(estFaceMur){droite();avance();gauche();avance()}